feat: Implement IC2 Classic balance recommendations
Based on research/ic2_classic_balance_research.md:

High Priority:
- UUNeedsScrap=true: Mass Fabricator now requires scrap
  amplifier for UU-Matter production (+5 progress per scrap)

Medium Priority:
- enableHardEnrichedUran=true: Harder uranium enrichment
  process gates nuclear power to late-game (Era V)

These changes add meaningful resource management to
end-game IC2 progression without breaking core gameplay.

--- a/config/ic2/ic2.cfg
+++ b/config/ic2/ic2.cfg
@@ -8,7 +8,8 @@ balance {
     I:RFPerEU=8
 
     # This config sets the massfabricator to require amplifier to produce UUMatter. The cheapining Rules apply still. +5Progress per Amplifier
-    B:UUNeedsScrap=false
+    # EnergyCraft: Enabled to add meaningful resource management to UU-Matter production
+    B:UUNeedsScrap=true
 
     # Defines the Difficulty Level of Crops. 0 = Very Easy, 1 = Easy, 2 = Normal, 3 = Hard. This effects CropGrowth, Breeding, And StatBreeding
     I:cropDifficulty=2
@@ -113,7 +114,8 @@ features {
     B:enableGreg=true
 
     # Enable Harder Enriched Uranium Processing. Making it not so easy to create
-    B:enableHardEnrichedUran=false
+    # EnergyCraft: Enabled to gate nuclear power behind more infrastructure (Era V)
+    B:enableHardEnrichedUran=true
 
     # Enable IC2 easy mode dissables explosions of Machines and melting of cables
     B:enableIC2EasyMode=false
