feat: Add modpack distribution system and documentation
- setup.ps1: Automated mod download from GitHub Releases
- tools/package-mods.ps1: Package mods into distributable archive
- Updated README with proper installation instructions
- Added research docs (Environmental Tech, IC2 Classic Balance)
- Added Environmental Tech configs
- Added DE/BrandonsCore configs
- Added Curator handoff document
- Updated .gitignore for distribution archives

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ mods/*.jar
 mods/**/*.jar
 
 # ===================
+# DISTRIBUTION ARCHIVES (uploaded to GitHub Releases, not tracked)
+# ===================
+energycraft-mods.zip
+mod-manifest.txt
+
+# ===================
 # WORLD SAVES (personal, large)
 # ===================
 saves/
