--- a/config/betterquesting.cfg
+++ b/config/betterquesting.cfg
@@ -14,7 +14,7 @@ general {
     B:"Quest Notices"=true
 
     # The current questing theme [default: betterquesting:light]
-    S:Theme=betterquesting:light
+    S:Theme=betterquesting:new_test
 
     # Jumps the user to the last opened quest [default: true]
     B:"Use Quest Bookmark"=true
