Balance config: DE armor nerfs + ET power scaling
Draconic Evolution:
- Shield capacity reduced (Draconic 512128, Wyvern 25632)
- Draconic RF capacity 16M1.6M (prevents infinite health)
- Shield recharge cost increased 10x (combat drains resources)
- Flight speed capped at 1.5x (prevents chunk lag)

Environmental Tech:
- Void ore miner power: 4x multiplier (T1: 264k1.05M)
- Void ore miner buffers: Increased 4x to match
- Solar cell efficiency: 50% nerf all tiers
- Keeps IC2/BC power sources relevant longer

Scripts verified: All use ore dictionary (circuitAdvanced/Basic)

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -97,10 +97,12 @@ Misc {
     D:draconicAxeAttackSpeed=-3.2
     D:draconicAxeMineSpeed=18.0
     I:draconicBaseMineAOE=1
-    I:draconicBaseRFCapacity=16000000
+    # EnergyCraft: Reduced from 16M to 1.6M to prevent invincibility
+    I:draconicBaseRFCapacity=1600000
 
     # Allows you to adjust the total shield capacity of a full set of Draconic Armor.
-    I:draconicBaseShieldCapacity=512
+    # EnergyCraft: Reduced from 512 to 128 for balanced combat
+    I:draconicBaseShieldCapacity=128
     D:draconicHoeAttackDMG=10.0
     D:draconicHoeAttackSpeed=0.0
 
@@ -111,7 +113,8 @@ Misc {
     D:draconicPicMineSpeed=18.0
 
     # Allows you to adjust the amount of RF that Draconic Armor requires to recharge 1 shield point.
-    I:draconicShieldRechargeCost=1000
+    # EnergyCraft: Increased from 1000 to 10000 to make sustained combat expensive
+    I:draconicShieldRechargeCost=10000
 
     # Allows you to adjust how fast Draconic Armor is able to recover entropy.  Value is {this number}% every 5 seconds.
     D:draconicShieldRecovery=4.0
@@ -123,7 +126,8 @@ Misc {
     D:draconicStaffMineSpeed=60.0
     D:draconicSwordAttackDMG=35.0
     D:draconicSwordAttackSpeed=-2.0
-    D:flightSpeedModifier=1.0
+    # EnergyCraft: Capped flight speed to prevent chunk loading lag
+    D:flightSpeedModifier=1.5
     I:lastStandEnergyRequirement=10000000
     D:wyvernAttackSpeed=-3.0
     D:wyvernAxeAttackDMG=25.0
@@ -132,7 +136,8 @@ Misc {
     I:wyvernBaseRFCapacity=4000000
 
     # Allows you to adjust the total shield capacity of a full set of Wyvern Armor.
-    I:wyvernBaseShieldCapacity=256
+    # EnergyCraft: Reduced from 256 to 32 for balanced combat
+    I:wyvernBaseShieldCapacity=32
 
     # Allows you to adjust how fast Wyvern Armor is able to recieve RF/tick.
     I:wyvernMaxRecieve=512000
@@ -141,7 +146,8 @@ Misc {
     D:wyvernPicMineSpeed=12.0
 
     # Allows you to adjust the amount of RF that Wyvern Armor requires to recharge 1 shield point.
-    I:wyvernShieldRechargeCost=1000
+    # EnergyCraft: Increased from 1000 to 5000 for balanced combat
+    I:wyvernShieldRechargeCost=5000
 
     # Allows you to adjust how fast Wyvern Armor is able to recover entropy.  Value is {this number}% every 5 seconds.
     D:wyvernShieldRecovery=2.0
