--- a/config/environmentaltech/main.cfg
+++ b/config/environmentaltech/main.cfg
@@ -105,22 +105,28 @@ environmentaltech {
 
         solar_array {
             # Litherite Solar Cell efficiency [range: 48 ~ 480, default: 48]
-            I:1litherite_solar_cell_efficiency=48
+            # EnergyCraft: 50% solar nerf
+            I:1litherite_solar_cell_efficiency=24
 
             # Erodium Solar Cell efficiency [range: 64 ~ 640, default: 64]
-            I:2erodium_solar_cell_efficiency=64
+            # EnergyCraft: 50% solar nerf
+            I:2erodium_solar_cell_efficiency=32
 
             # Kyronite Solar Cell efficiency [range: 96 ~ 960, default: 96]
-            I:3kyronite_solar_cell_efficiency=96
+            # EnergyCraft: 50% solar nerf
+            I:3kyronite_solar_cell_efficiency=48
 
             # Pladium Solar Cell efficiency [range: 128 ~ 1280, default: 128]
-            I:4pladium_solar_cell_efficiency=128
+            # EnergyCraft: 50% solar nerf
+            I:4pladium_solar_cell_efficiency=64
 
             # Ionite Solar Cell efficiency [range: 192 ~ 1920, default: 192]
-            I:5ionite_solar_cell_efficiency=192
+            # EnergyCraft: 50% solar nerf
+            I:5ionite_solar_cell_efficiency=96
 
             # Aethium Solar Cell efficiency [range: 256 ~ 2560, default: 256]
-            I:6aethium_solar_cell_efficiency=256
+            # EnergyCraft: 50% solar nerf
+            I:6aethium_solar_cell_efficiency=128
 
             # Is Module Enabled? [default: true]
             B:enabled=true
@@ -169,45 +175,52 @@ environmentaltech {
                 B:enabled=true
 
                 # Tier 1 Energy Buffer size [range: 1000000 ~ 2147483647, default: 1000000]
-                I:t1_ore_miner_energy_buffer=1000000
+            # EnergyCraft: Increased buffer to 4M for 4x power draw
+            I:t1_ore_miner_energy_buffer=4000000
 
-                # Tier 1 Energy cost per duration [range: 0 ~ 2147483647, default: 264000]
-                I:t1_ore_miner_energy_duration=264000
+            # Tier 1 Energy cost per duration [range: 0 ~ 2147483647, default: 264000]
+            # EnergyCraft: 4x power multiplier (264000 -> 1056000)
+            I:t1_ore_miner_energy_duration=1056000
 
-                # Tier 2 Energy Buffer size [range: 2000000 ~ 2147483647, default: 2000000]
-                I:t2_ore_miner_energy_buffer=2000000
+            # Tier 2 Energy Buffer size [range: 2000000 ~ 2147483647, default: 2000000]
+            # EnergyCraft: Increased buffer to 8M for 4x power draw
+            I:t2_ore_miner_energy_buffer=8000000
 
-                # Tier 2 Energy cost per duration [range: 0 ~ 2147483647, default: 184000]
-                I:t2_ore_miner_energy_duration=184000
+            # Tier 2 Energy cost per duration [range: 0 ~ 2147483647, default: 184000]
+            # EnergyCraft: 4x power multiplier (184000 -> 736000)
+            I:t2_ore_miner_energy_duration=736000
 
-                # Tier 3 Energy Buffer size [range: 3000000 ~ 2147483647, default: 3000000]
-                I:t3_ore_miner_energy_buffer=3000000
+            # Tier 3 Energy Buffer size [range: 3000000 ~ 2147483647, default: 3000000]
+            # EnergyCraft: Increased buffer to 12M for 4x power draw
+            I:t3_ore_miner_energy_buffer=12000000
 
-                # Tier 3 Energy cost per duration [range: 0 ~ 2147483647, default: 120000]
-                I:t3_ore_miner_energy_duration=120000
+            # Tier 3 Energy cost per duration [range: 0 ~ 2147483647, default: 120000]
+            # EnergyCraft: 4x power multiplier (120000 -> 480000)
+            I:t3_ore_miner_energy_duration=480000
 
-                # Tier 4 Energy Buffer size [range: 4000000 ~ 2147483647, default: 4000000]
-                I:t4_ore_miner_energy_buffer=4000000
+            # Tier 4 Energy Buffer size [range: 4000000 ~ 2147483647, default: 4000000]
+            # EnergyCraft: Increased buffer to 16M for 4x power draw
+            I:t4_ore_miner_energy_buffer=16000000
 
-                # Tier 4 Energy cost per duration [range: 0 ~ 2147483647, default: 72000]
-                I:t4_ore_miner_energy_duration=72000
+            # Tier 4 Energy cost per duration [range: 0 ~ 2147483647, default: 72000]
+            # EnergyCraft: 4x power multiplier (72000 -> 288000)
+            I:t4_ore_miner_energy_duration=288000
 
-                # Tier 5 Energy Buffer size [range: 5000000 ~ 2147483647, default: 5000000]
-                I:t5_ore_miner_energy_buffer=5000000
+            # Tier 5 Energy Buffer size [range: 5000000 ~ 2147483647, default: 5000000]
+            # EnergyCraft: Increased buffer to 20M for 4x power draw
+            I:t5_ore_miner_energy_buffer=20000000
 
-                # Tier 5 Energy cost per duration [range: 0 ~ 2147483647, default: 40000]
-                I:t5_ore_miner_energy_duration=40000
+            # Tier 5 Energy cost per duration [range: 0 ~ 2147483647, default: 40000]
+            # EnergyCraft: 4x power multiplier (40000 -> 160000)
+            I:t5_ore_miner_energy_duration=160000
 
-                # Tier 6 Energy Buffer size [range: 6000000 ~ 2147483647, default: 6000000]
-                I:t6_ore_miner_energy_buffer=6000000
+            # Tier 6 Energy Buffer size [range: 6000000 ~ 2147483647, default: 6000000]
+            # EnergyCraft: Increased buffer to 24M for 4x power draw
+            I:t6_ore_miner_energy_buffer=24000000
 
-                # Tier 6 Energy cost per duration [range: 0 ~ 2147483647, default: 16000]
-                I:t6_ore_miner_energy_duration=16000
-            }
-
-            resource {
-                # Is Module Enabled? [default: true]
-                B:enabled=true
+            # Tier 6 Energy cost per duration [range: 0 ~ 2147483647, default: 16000]
+            # EnergyCraft: 4x power multiplier (16000 -> 64000)
+            I:t6_ore_miner_energy_duration=64000
 
                 # Tier 1 Energy Buffer size [range: 1000000 ~ 2147483647, default: 1000000]
                 I:t1_res_miner_energy_buffer=1000000
